# oop_1

./: CMakeLists.txt  README.md  gcc14_toolchain.cmake  help.txt
include/: extruct.h
src/: extruct.cpp  main.cpp
tests/: CMakeLists.txt  test_extructNumbers.cpp
